# mesh-sensor-node

./: CMakeLists.txt  prj.conf  west.yml
boards/: particle_xenon.overlay
include/: aht20.h  model_handler.h
src/: aht20.c  main.c  model_handler.c
